[package]
name = "rcore-thread"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "Bare-metal multithreading on multi-core processor."
edition = "2018"

[features]
# ignore interrupt instructions
userland = []

[dependencies]
log = "0.4"
spin = "0.5"
deque = { git = "https://github.com/rcore-os/deque.git", branch = "no_std" }
async-task = "2.0"
queueue = ">=0.1.1-beta.3"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.11"
